Alteracoes nos botoes de cadastro do RG e no layout de vizualizaÃÃo

--- a/src/CadpazBundle/Resources/views/Pessoa/newRG.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/newRG.html.twig
@@ -1,4 +1,4 @@
-<div class="meio">
+<div class="meio" style="background-color: #FBF7AA">
 <strong>RG</strong>
 
 <br>
@@ -13,10 +13,10 @@
 {{ form_end(form) }}
 </div>
 <br>
-<a href="#" id="saveRgButton">Salvar</a>
+<button type="button" id="saveRgButton">Salvar</button>
 
-<div class="spacer"></div>
-<a class="cancel" href="#">Cancelar</a>
+
+<button type="button" class="cancel" href="#">Cancelar</button>
 </div>
 <div class="spacer"></div>
 
